test/functions/bradc/typefn2.good
typefn2.chpl:1: error: Return type does not match type of returned expression
